6057 Use SleeperNetworking in CommonEmrBulkImportStack